-added lastupdatedon
-removed dob,dod,country, landmark, pincode, lastname
-renamed firstname to name
-updated UI and backend integration
-seperated both modules while updating to handle null override of data
-added automatic increasing build number
-removed admitted on as secondary key
-added string to boolean conversions
-added UI
-added date of samples for 1st,2nd,3rd tests
-updated the table
-added entities, crud operations, db setup with script
- Started working on junit
-converted all the methods to post
-added dependencies
-added seperate request response classes
-added custom queries